@@ -91,10 +91,10 @@ public class TestRowSliceFactory {
 	public void testRetainAll() {
 		IAdhocMap aAndB = factory.newMapBuilder(List.of("a", "b")).append("a1").append("b1").build();
 
-		IAdhocMap onlyA = aAndB.retainAll(Set.of("a"));
+		IAdhocMap onlyA = aAndB.retainAll(ImmutableSet.of("a"));
 		Assertions.assertThat((Map) onlyA).isEqualTo(Map.of("a", "a1")).hasSameHashCodeAs(Map.of("a", "a1"));
 
-		IAdhocMap onlyB = aAndB.retainAll(Set.of("b"));
+		IAdhocMap onlyB = aAndB.retainAll(ImmutableSet.of("b"));
 		Assertions.assertThat((Map) onlyB).isEqualTo(Map.of("b", "b1")).hasSameHashCodeAs(Map.of("b", "b1"));
 	}
 
